--- a/WalletWasabi.Backend/wwwroot/about.html
+++ b/WalletWasabi.Backend/wwwroot/about.html
@@ -186,7 +186,7 @@
                                 <div class="icon-big mx-auto">
                                     <img src="img/downloadww.svg">
                                 </div>
-                                <p class="mt-4 mb-0">
+                                <p class="mt-4 mb-0 text-md-left">
                                     <strong>1. Download Wasabi Wallet</strong>
                                 </p>
                             </div>
@@ -194,7 +194,7 @@
                                 <div class="icon-big mx-auto">
                                     <img src="img/createnewwallet.svg">
                                 </div>
-                                <p class="mt-4 mb-0">
+                                <p class="mt-4 mb-0 text-md-left">
                                     <strong>2. Create a new wallet</strong>
                                 </p>
                             </div>
@@ -202,7 +202,7 @@
                                 <div class="icon-big mx-auto">
                                     <img src="img/coinjoin.svg">
                                 </div>
-                                <p class="mt-4 mb-0">
+                                <p class="mt-4 mb-0 text-md-left">
                                     <strong>3. Let auto-coinjoin do its magic</strong>
                                 </p>
                             </div>
