--- a/WalletWasabi.Backend/wwwroot/contribution.html
+++ b/WalletWasabi.Backend/wwwroot/contribution.html
@@ -82,7 +82,7 @@
                             <p>A contributor is any individual who works to add value to Wasabi and its users. Staying true to its open source nature, Wasabi Wallet has hosted multiple contribution games since their inception in July, 2019.</p>
 
                             <p>
-                                We now have permanent contributors who came onboard from the contribution games. But don't misinterpret our intentions. Though the word ‘game’ is in the title, this is very much meaningful work. As stated at the top of this page, we belive in the power of collaboration and trust the community to handle some of the more meaningful tasks.
+                                We now have permanent contributors who came onboard from the contribution games. But don't misinterpret our intentions. Though the word ‘game’ is in the title, this is very much meaningful work. As stated at the top of this page, we believe in the power of collaboration and trust the community to handle some of the more meaningful tasks.
                             </p>
                         </div>
                     </div>
