--- a/WalletWasabi.Backend/wwwroot/404.html
+++ b/WalletWasabi.Backend/wwwroot/404.html
@@ -4,29 +4,29 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="title" content="Wasabi Wallet - Bitcoin privacy wallet with built-in coinjoin">
+    <meta name="title" content="Wasabi Wallet - 404 Page not found">
     <meta name="description" content="Wasabi is an open-source, non-custodial, privacy-focused Bitcoin wallet for desktop, that implements trustless coinjoin over the Tor anonymity network.">
     <meta http-equiv="onion-location" content="http://wasabiukrxmkdgve5kynjztuovbg43uxcbcxn6y2okcrsg7gb6jdmbad.onion" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://wasabiwallet.io">
-    <meta property="og:title" content="Wasabi Wallet - Bitcoin privacy wallet with built-in coinjoin">
+    <meta property="og:title" content="Wasabi Wallet - 404 Page not found">
     <meta property="og:description" content="Wasabi is an open-source, non-custodial, privacy-focused Bitcoin wallet for desktop, it implements trustless coinjoin over the Tor anonymity network.">
     <meta property="og:image" content="https://wasabiwallet.io/img/wasabi-social.jpg">
-    <meta property="og:site_name" content="Wasabi Wallet - Bitcoin privacy wallet with built-in coinjoin">
+    <meta property="og:site_name" content="Wasabi Wallet - 404 Page not found">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://wasabiwallet.io">
-    <meta property="twitter:title" content="Wasabi Wallet - Bitcoin privacy wallet with built-in coinjoin">
+    <meta property="twitter:title" content="Wasabi Wallet - 404 Page not found">
     <meta property="twitter:description" content="Wasabi is an open-source, non-custodial, privacy-focused Bitcoin wallet for desktop, it implements trustless coinjoin over the Tor anonymity network.">
     <meta property="twitter:image" content="https://wasabiwallet.io/img/wasabi-social.jpg">
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="img/favicon.ico">
-    <title>Wasabi Wallet - Bitcoin privacy wallet with built-in coinjoin</title>
+    <title>Wasabi Wallet - 404 Page not found</title>
 
 </head>
 
@@ -44,9 +44,9 @@
                         <img src="img/logo.svg" alt="Wasabi Wallet">
                     </a>
                 </div>
-                <h1><span class="green-text">404 Error</span></h1>
+                <h1><span class="green-text">Page not found</span></h1>
                 <p>
-                    We can't find what you are looking for.<br>It must have been coinjoined.
+                    We couldn't find the page you were looking for.<br>Maybe it's hiding with Satoshi Nakamoto.
                 </p>
             </div>
             <a href="index.html" class="btn btn-primary btn-download d-block d-md-inline">
