--- a/WalletWasabi.Backend/wwwroot/faq.html
+++ b/WalletWasabi.Backend/wwwroot/faq.html
@@ -60,7 +60,7 @@
           "text":"<p>Wasabi does support hardware wallet usage through the standard Bitcoin-core HWI, although coinjoining straight from or to a hardware wallet is not yet possible.</p><p>Here's a <a href='https://github.com/zkSNACKs/WalletWasabi/blob/master/WalletWasabi.Documentation/WasabiCompatibility.md#officially-supported-hardware-wallets' target='_blank'>list</a> of the officially supported hardware wallets.</p>"}
         }, {
         "@type": "Question",
-        "name": "Is there an Adroid /iOS version?",
+        "name": "Is there an Android/iOS version?",
         "acceptedAnswer": {
           "@type": "Answer",
           "text": "<p>No, Wasabi and CoinJoin features require considerable computational power, not currently replicable on a smartphone.</p>"
